<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/fragment_padding_dimen"
    android:paddingEnd="@dimen/fragment_padding_dimen">
    
    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_filters_and_recycler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="text_filters, chip_group_sort, recycler_favorites"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_filters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sorted_stub"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/chip_group_sort"
        app:layout_constraintBottom_toBottomOf="@id/chip_group_sort"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/fragment_padding_dimen"
        app:layout_constraintStart_toEndOf="@id/text_filters"
        app:layout_constraintTop_toTopOf="parent"
        app:singleSelection="true"
        app:selectionRequired="true"
        >

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_sort_default"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/chip_sort_default" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_sort_date"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_sort_date" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_sort_name"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_sort_name" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_sort_type"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_sort_type" />
        

    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_favorites"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/card_view_margin"
        app:layout_constraintTop_toBottomOf="@id/chip_group_sort"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/favorites_stub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_added_stub"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>