<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/fragment_pod_padding_dimen"
    android:paddingEnd="@dimen/fragment_pod_padding_dimen"
    tools:context=".ui.rover.RoverPhotoFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_date_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_view_margin"
        android:hint="@string/input_text_date_prompt"
        app:endIconCheckable="true"
        app:endIconDrawable="@drawable/ic_calendar"
        app:endIconMode="custom"

        app:helperText="@string/input_edit_text_search_wiki_prompt"
        app:layout_constraintEnd_toStartOf="@+id/show_photos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_edit_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/show_photos"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/button_show_photos"
        app:layout_constraintBottom_toBottomOf="@+id/input_date_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/input_date_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_date_layout">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/calendar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <CalendarView
                android:id="@+id/calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_ok_button"
                app:fabSize="mini"
                app:layout_anchor="@id/calendar"
                app:layout_anchorGravity="bottom|right|end" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_rovers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_view_margin"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>